@@ -24,6 +24,7 @@ import java.io.Closeable;
 import java.io.IOException;
 
 import cascading.flow.FlowProcess;
+import cascading.flow.hadoop.HadoopFlowProcess;
 import cascading.tap.Tap;
 import cascading.tap.TapException;
 import cascading.tap.hadoop.util.Hadoop18TapUtil;
@@ -64,8 +65,7 @@ public class TapOutputCollector implements OutputCollector, Closeable
   private long sequence;
   /** Field isFileOutputFormat */
   private boolean isFileOutputFormat;
-  /** Field reporter */
-  private final Reporter reporter = Reporter.NULL;
+  /** Field flowProcess */
   private final FlowProcess<JobConf> flowProcess;
 
   public TapOutputCollector( FlowProcess<JobConf> flowProcess, Tap<JobConf, RecordReader, OutputCollector> tap ) throws IOException
@@ -111,7 +111,17 @@ public class TapOutputCollector implements OutputCollector, Closeable
 
     LOG.info( "creating path: {}", filename );
 
-    writer = outputFormat.getRecordWriter( null, conf, filename, Reporter.NULL );
+    writer = outputFormat.getRecordWriter( null, conf, filename, getReporter() );
+    }
+
+  private Reporter getReporter()
+    {
+    Reporter reporter = Reporter.NULL;
+
+    if( flowProcess instanceof HadoopFlowProcess )
+      reporter = ( (HadoopFlowProcess) flowProcess ).getReporter(); // may return Reporter.NULL
+
+    return reporter;
     }
 
   /**
@@ -138,7 +148,7 @@ public class TapOutputCollector implements OutputCollector, Closeable
 
       try
         {
-        writer.close( reporter );
+        writer.close( getReporter() );
         }
       finally
         {
@@ -157,5 +167,4 @@ public class TapOutputCollector implements OutputCollector, Closeable
       throw new TapException( "exception closing: " + filename, exception );
       }
     }
-
   }
